# Prism-VST-Plugin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
Source/: LoudnessProcessor.cpp  LoudnessProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RightsChecker.cpp  RightsChecker.h  TikTokUploader.cpp  TikTokUploader.h
Source/Audio/: AudioProcessorChain.cpp  AudioProcessorChain.h
Source/TikTok/: TikTokAPIHandler.cpp  TikTokAPIHandler.h
Source/Video/: VideoGenerator.cpp  VideoGenerator.h
include/: PrismPlugin.h
scripts/: install_plugin.sh
src/: PrismPlugin.cpp
tests/: PluginHost.cpp
